--- a/opwen_email_client/webapp/templates/macros/email.html
+++ b/opwen_email_client/webapp/templates/macros/email.html
@@ -1,3 +1,4 @@
+{% from 'macros/classroom.html' import classroom %}
 {% from 'macros/nav.html' import nav_link %}
 
 {% macro email_search_form() %}
@@ -58,13 +59,16 @@
             </div>
           </div>
           {% if email['attachments'] %}
+          {{ classroom(email['attachments']) }}
           <div class="row hidden-print">
             <div class="col-sm-12">
               <ul class="list-inline">
                 {% for attachment in email['attachments'] %}
+                {% if not attachment.filename.endswith('.lesson') %}
                 <li>
                   <a href="{{ url_for('download_attachment', attachment_id=attachment['id']) }}">{{ attachment['filename'] }}</a>
                 </li>
+                {% endif %}
                 {% endfor %}
               </ul>
             </div>
