--- a/opwen_email_client/webapp/templates/macros/classroom.html
+++ b/opwen_email_client/webapp/templates/macros/classroom.html
@@ -4,7 +4,7 @@
 
 <div class="row hidden-print">
     <div class="col-sm-12">
-        <div id="myCarousel" class="carousel slide" height="400">
+        <div id="myCarousel" class="carousel slide">
             <!-- Indicators -->
             <ol class="carousel-indicators">
                 {% for slide in attachment['lesson']['slides'] %}
@@ -19,16 +19,16 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 {% for slide in attachment['lesson']['slides'] %}
-                {% if loop.index0 == 0 %}
-                <div class="item active">
-                {% else %}
-                <div class="item">
+                    {% if loop.index0 == 0 %}
+                    <div class="item active">
+                    {% else %}
+                    <div class="item">
                     {% endif %}
                     <img src="{{slide['image']}}"/>
-                    <div class="carousel-caption">
+                    <div class="carousel-caption" style="opacity:0.6;background:black">
                         <p>{{slide['text']}}</p>
                     </div>
-                </div>
+                    </div>
                 {% endfor %}
             </div>
 
@@ -42,7 +42,7 @@
                 <span class="sr-only">Next</span>
             </a>
             <script type="text/javascript">
-            <!-- Add touch functionality to Carousel -->
+            // Add touch functionality to Carousel
             $(".carousel").on("touchstart", function(event){
                 var xClick = event.originalEvent.touches[0].pageX;
                 $(this).one("touchmove", function(event){
