--- a/opwen_email_client/webapp/templates/macros/classroom.html
+++ b/opwen_email_client/webapp/templates/macros/classroom.html
@@ -79,6 +79,8 @@
                 });
             });
         </script>
+        <span class="skype-button bubble " data-bot-id="60beee5b-cb55-45c0-8ca1-7baf00220c97"></span>
+        <script src="https://latest-swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
     </div>
 </div>
 {% endif %}
